--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,40 +1,40 @@
 /* Imports */
 
-@import 'ajax';
-@import 'html5';
-@import '_events';
+@import "ajax";
+@import "html5";
+@import "_events";
 
 /* Grid layout */
 
 .item1 {
-    grid-area: header;
+  grid-area: header;
 }
 
 .item2 {
-    grid-area: menu;
+  grid-area: menu;
 }
 
 .item3 {
-    grid-area: main;
+  grid-area: main;
 }
 
 .item4 {
-    grid-area: right;
+  grid-area: right;
 }
 
 .item5 {
-    grid-area: footer;
+  grid-area: footer;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-areas: 'header header header header header header''menu main main main right right''menu footer footer footer footer footer';
-    grid-gap: 10px;
-    padding: 10px;
+  display: grid;
+  grid-template-areas: "header header header header header header" "menu main main main right right" "menu footer footer footer footer footer";
+  grid-gap: 10px;
+  padding: 10px;
 }
 
-.grid-container>div {
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
 }
