--- a/css/slider.css
+++ b/css/slider.css
@@ -1,10 +1,8 @@
 html {
-  height: 100%;
-}
+  height: 100%; }
 
 .slider-container {
-  position: relative;
-}
+  position: relative; }
 
 .slider-container .slider-parent {
   height: 100vh;
@@ -22,8 +20,7 @@ html {
   -webkit-transition: 0.4s all linear;
   -moz-transition: 0.4s all linear;
   -ms-transition: 0.4s all linear;
-  -o-transition: 0.4s all linear;
-}
+  -o-transition: 0.4s all linear; }
 
 .slider-container .slider-parent.active {
   visibility: visible;
@@ -36,32 +33,26 @@ html {
   -webkit-transition: 0.3s all ease-in-out;
   -moz-transition: 0.3s all ease-in-out;
   -ms-transition: 0.3s all ease-in-out;
-  -o-transition: 0.3s all ease-in-out;
-}
+  -o-transition: 0.3s all ease-in-out; }
 
 .content {
   padding: 40px 0 0 60px;
   color: grey;
   font-size: 20px;
-  line-height: 50px;
-}
+  line-height: 50px; }
 
 .content a:link {
   color: grey;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .content a:visited {
-  color: grey;
-}
+  color: grey; }
 
 .content a:hover {
-  color: lightgray;
-}
+  color: lightgray; }
 
 .content a:active {
-  color: grey;
-}
+  color: grey; }
 
 .bar1,
 .bar2,
@@ -75,8 +66,7 @@ html {
   -webkit-transition: 0.2s all linear;
   -moz-transition: 0.2s all linear;
   -ms-transition: 0.2s all linear;
-  -o-transition: 0.2s all linear;
-}
+  -o-transition: 0.2s all linear; }
 
 .open .bar1 {
   transform: rotate(45deg) translate(6px, 17px);
@@ -85,8 +75,7 @@ html {
   -webkit-transform: rotate(45deg) translate(6px, 17px);
   -moz-transform: rotate(45deg) translate(6px, 17px);
   -ms-transform: rotate(45deg) translate(6px, 17px);
-  -o-transform: rotate(45deg) translate(6px, 17px);
-}
+  -o-transform: rotate(45deg) translate(6px, 17px); }
 
 .open .bar2 {
   transform: rotate(45deg) translate(-2px, 10px);
@@ -95,8 +84,7 @@ html {
   -webkit-transform: rotate(45deg) translate(-2px, 10px);
   -moz-transform: rotate(45deg) translate(-2px, 10px);
   -ms-transform: rotate(45deg) translate(-2px, 10px);
-  -o-transform: rotate(45deg) translate(-2px, 10px);
-}
+  -o-transform: rotate(45deg) translate(-2px, 10px); }
 
 .open .bar3 {
   transform: rotate(130deg) translate(3px, 10px);
@@ -105,7 +93,33 @@ html {
   -webkit-transform: rotate(130deg) translate(3px, 10px);
   -moz-transform: rotate(130deg) translate(3px, 10px);
   -ms-transform: rotate(130deg) translate(3px, 10px);
-  -o-transform: rotate(130deg) translate(3px, 10px);
-}
+  -o-transform: rotate(130deg) translate(3px, 10px); }
+
+/* Grid layout */
+.item1 {
+  grid-area: header; }
+
+.item2 {
+  grid-area: menu; }
+
+.item3 {
+  grid-area: main; }
+
+.item4 {
+  grid-area: right; }
+
+.item5 {
+  grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas: "header header header header header header" "menu main main main right right" "menu footer footer footer footer footer";
+  grid-gap: 10px;
+  padding: 10px; }
+
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px; }
 
 /*# sourceMappingURL=slider.css.map */
