--- a/project/sass/_weatherCard.scss
+++ b/project/sass/_weatherCard.scss
@@ -1,3 +1,24 @@
+#weatherList {
+
+    &>div {
+        text-align: left;
+        border: 1px black solid;
+        max-width: auto;
+    }
+}
+
+.flex-container {
+    display: flex;
+    width: auto;
+
+    &>div {
+        background-color: #f1f1f1;
+        margin: 10px;
+        padding: 20px;
+        font-size: 30px;
+    }
+}
+
 .hot {
     &>ul {
         background-color: white;
@@ -75,12 +96,27 @@
 
         .bar2 {
             transform: rotate(45deg) translate(-7px, -8px);
-            background-color: white;
+            background-color: black;
         }
 
         .bar3 {
-            transform: rotate(45deg) translate(-15px, -15px);
+            transform: rotate(45deg) translate(-18px, -18px);
             background-color: black;
+            position: absolute;
         }
     }
+}
+
+@keyframes shrink {
+    0% {}
+
+    50% {}
+
+    100% {}
+
+}
+
+#error {
+    animation: shrink 1s linear;
+    transition: height 2;
 }
