--- a/project/sass/style.scss
+++ b/project/sass/style.scss
@@ -1,5 +1,3 @@
-@import '_weatherCard';
-
 /* Grid layout */
 .item1 {
     grid-area: header;
@@ -39,7 +37,7 @@ li {
 }
 
 .clear {
-    transition: height 3s, width 3s;
+    transition: height 1s, width 1s;
     height: 18px;
     width: 120px;
 
@@ -51,7 +49,7 @@ li {
 }
 
 .storage {
-    transition: height 3s, width 3s;
+    transition: height 2s, width 2s;
     height: 18px;
     width: 120px;
 
@@ -101,6 +99,135 @@ li {
 
 .exit {
     animation: exit linear 4s;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#weatherList {
+
+    &>div {
+        text-align: left;
+        border: 1px black solid;
+        max-width: auto;
+    }
+}
+
+.flex-container {
+    display: flex;
+    width: auto;
+
+    &>div {
+        background-color: #f1f1f1;
+        margin: 10px;
+        padding: 20px;
+        font-size: 30px;
+    }
+}
+
+.hot {
+    &>ul {
+        background-color: white;
+    }
+
+    &:hover {
+        background-color: red;
+        background-image: url(https://us.123rf.com/450wm/flukesamed/flukesamed1507/flukesamed150700007/41972309-blaze-fire-flame-texture-background.jpg?ver=6);
+    }
+}
+
+.cool {
+
+    &>ul {
+        background-color: white;
+    }
+
+    &:hover {
+        background-color: skyblue;
+        background-image: url(https://images.all-free-download.com/images/graphicthumb/bright_spring_backgrounds_530600.jpg);
+    }
+}
+
+.cold {
+
+    &>ul {
+        background-color: white;
+    }
+
+    &:hover {
+        background-color: snow;
+        background-image: url(https://images-na.ssl-images-amazon.com/images/I/61nR-hxJBfL._SX466_.jpg);
+    }
+}
+
+.bar1 {
+    width: 35px;
+    height: 5px;
+    background-color: #ccc;
+    transition: 0.2s all linear;
+    margin: 5px 0px;
+    border-radius: 25px;
+}
+
+.bar2 {
+    width: 35px;
+    height: 5px;
+    background-color: #ccc;
+    transition: 0.2s all linear;
+    margin: 5px 0px;
+    border-radius: 25px;
+}
+
+.bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #ccc;
+    transition: 0.2s all linear;
+    margin: 5px 0px;
+    border-radius: 25px;
+}
+
+.bar {
+    max-width: 35px;
+    position: relative;
+    top: 5px;
+    left: 205px;
+    padding: 10px 10px;
+
+    &:hover {
+        .bar1 {
+            transform: rotate(-45deg) translate(0px, 0px);
+            background-color: black;
+        }
+
+        .bar2 {
+            transform: rotate(45deg) translate(-7px, -8px);
+            background-color: black;
+        }
+
+        .bar3 {
+            transform: rotate(45deg) translate(-18px, -18px);
+            background-color: black;
+            position: absolute;
+        }
+    }
+}
+
+@keyframes shrink {
+
+    to {
+        height: 0px;
+    }
+
+    from {
+
+        height: 500px;
+    }
+
+}
+
+#error {
+    animation: shrink 10s linear;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
